sqlite/conformance/sqlite-sqltests/snapshot_tests/joins/snapshots/joins__index-assisted-join-range-scan.snap
---
source: joins.sqltest
expression: |-
  SELECT
          c.name,
          COUNT(o.order_id) AS order_count
      FROM
          customers c
      INNER JOIN orders o ON c.customer_id = o.customer_id
      WHERE
          c.customer_id BETWEEN 10 AND 20
      GROUP BY
          c.customer_id, c.name;
info:
  statement_type: SELECT
  tables:
  - c.customer_id
  - customers
  - orders
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
|--SEARCH c USING INTEGER PRIMARY KEY (rowid=?)
|--SEARCH o USING COVERING INDEX idx_orders_customer_id (customer_id=?)
`--USE SORTER FOR GROUP BY
