sqlite/conformance/sqlite-sqltests/snapshot_tests/joins/snapshots/joins__index-assisted-join-single-customer.snap
---
source: joins.sqltest
expression: |-
  SELECT
          c.name,
          o.order_id,
          o.order_date,
          o.total_amount
      FROM
          customers c
      INNER JOIN orders o ON c.customer_id = o.customer_id
      WHERE
          c.customer_id = 42;
info:
  statement_type: SELECT
  tables:
  - c.customer_id
  - customers
  - orders
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
|--SEARCH c USING INTEGER PRIMARY KEY (rowid=?)
`--SEARCH o USING INDEX idx_orders_customer_id (customer_id=?)
