sqlite/conformance/sqlite-sqltests/snapshot_tests/joins/snapshots/joins__join-with-subquery.snap
---
source: joins.sqltest
expression: |-
  SELECT
          c.name,
          c.city,
          recent_orders.order_count,
          recent_orders.total_spent
      FROM
          customers c
      INNER JOIN (
          SELECT
              customer_id,
              COUNT(*) AS order_count,
              SUM(total_amount) AS total_spent
          FROM
              orders
          WHERE
              order_date >= '2024-01-01'
          GROUP BY
              customer_id
      ) AS recent_orders ON c.customer_id = recent_orders.customer_id
      ORDER BY
          recent_orders.total_spent DESC;
info:
  statement_type: SELECT
  tables:
  - c.customer_id
  - customers
  - orders
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
|--SCAN recent_orders
|  `--SCAN orders USING INDEX idx_orders_customer_id
|--MERGE JOIN customers AS c USING INTEGER PRIMARY KEY
`--USE SORTER FOR ORDER BY
