sqlite/conformance/sqlite-sqltests/snapshot_tests/joins/snapshots/joins__later-right-reduction-does-not-revisit-left-join.snap
---
source: joins.sqltest
expression: |-
  SELECT *
      FROM reduction_chain_a
      LEFT JOIN reduction_chain_b NOT INDEXED
          ON reduction_chain_a.id=reduction_chain_b.id
      JOIN reduction_chain_c ON true
      RIGHT JOIN reduction_chain_d NOT INDEXED
          ON reduction_chain_b.id=reduction_chain_d.id
      WHERE reduction_chain_c.id>0;
info:
  statement_type: SELECT
  tables:
  - reduction_chain_a
  - reduction_chain_a.id
  - reduction_chain_b
  - reduction_chain_b.id
  - reduction_chain_c
  - reduction_chain_d
  setup_blocks:
  - right_join_inner_on_schema
  database: ':memory:'
---
QUERY PLAN
|--SCAN reduction_chain_c
|--SCAN reduction_chain_a
|--SCAN reduction_chain_b LEFT-JOIN
`--SCAN reduction_chain_d

BYTECODE
addr  opcode             p1  p2  p3  p4      p5  comment
   0  Init                0  33   0           0  Start at 33
   1  OpenRead            0   2   0  k(2,B)   0  table=reduction_chain_a, root=2, iDb=0
   2  OpenRead            1   3   0  k(2,B)   0  table=reduction_chain_b, root=3, iDb=0
   3  OpenRead            2   4   0  k(2,B)   0  table=reduction_chain_c, root=4, iDb=0
   4  OpenRead            3   5   0  k(2,B)   0  table=reduction_chain_d, root=5, iDb=0
   5  Rewind              2  32   0           0  Rewind table reduction_chain_c
   6    IfNot             6  31   1           0  if !r[6] goto 31
   7    Column            2   0   8           0  r[8]=reduction_chain_c.id
   8    Le                8   9  31  Binary   0  if r[8]<=r[9] goto 31
   9    Rewind            0  31   0           0  Rewind table reduction_chain_a
  10      Integer         0   5   0           0  r[5]=0
  11      Rewind          1  27   0           0  Rewind table reduction_chain_b
  12        Column        0   0  11           0  r[11]=reduction_chain_a.id
  13        Column        1   0  12           0  r[12]=reduction_chain_b.id
  14        Ne           11  12  26  Binary   0  if r[11]!=r[12] goto 26
  15        Integer       1   5   0           0  r[5]=1
  16        Rewind        3  26   0           0  Rewind table reduction_chain_d
  17          Column      1   0  14           0  r[14]=reduction_chain_b.id
  18          Column      3   0  15           0  r[15]=reduction_chain_d.id
  19          Ne         14  15  25  Binary   0  if r[14]!=r[15] goto 25
  20          Column      0   0   1           0  r[1]=reduction_chain_a.id
  21          Column      1   0   2           0  r[2]=reduction_chain_b.id
  22          Column      2   0   3           0  r[3]=reduction_chain_c.id
  23          Column      3   0   4           0  r[4]=reduction_chain_d.id
  24          ResultRow   1   4   0           0  output=r[1..4]
  25        Next          3  17   0           1
  26      Next            1  12   0           1
  27      IfPos           5  30   0           0  r[5]>0 -> r[5]-=0, goto 30
  28      NullRow         1   0   0           0  Set cursor 1 to a (pseudo) NULL row
  29      Goto            0  15   0           0
  30    Next              0  10   0           1
  31  Next                2   6   0           1
  32  Halt                0   0   0           0
  33  Transaction         0   1   4           0  iDb=0 tx_mode=Read
  34  Integer             1   6   0           0  r[6]=1
  35  Integer             0   9   0           0  r[9]=0
  36  Goto                0   1   0           0
