sqlite/conformance/sqlite-sqltests/snapshot_tests/joins/snapshots/joins__left-join-expression-index-does-not-cover-null-row-columns.snap
---
source: joins.sqltest
expression: |-
  SELECT grouped_expr_left.x, coalesce(grouped_expr_right.b,7)
        FROM grouped_expr_left
        LEFT JOIN grouped_expr_right INDEXED BY grouped_expr_right_idx
          ON grouped_expr_right.a=grouped_expr_left.x;
info:
  statement_type: SELECT
  tables:
  - grouped_expr_left
  - grouped_expr_right
  - grouped_expr_right.a
  setup_blocks:
  - left_join_grouped_expression_index_schema
  database: ':memory:'
---
QUERY PLAN
|--SCAN grouped_expr_left
`--SEARCH grouped_expr_right USING INDEX grouped_expr_right_idx (a=?) LEFT-JOIN

BYTECODE
addr  opcode            p1  p2  p3  p4        p5  comment
   0  Init               0  28   0             0  Start at 28
   1  OpenRead           0   2   0  k(2,B)     0  table=grouped_expr_left, root=2, iDb=0
   2  OpenRead           1   3   0  k(3,B,B)   0  table=grouped_expr_right, root=3, iDb=0
   3  OpenRead           2   4   0  k(3,B,B)   0  index=grouped_expr_right_idx, root=4, iDb=0
   4  Rewind             0  27   0             0  Rewind table grouped_expr_left
   5    Integer          0   3   0             0  r[3]=0
   6    Column           0   0   4             0  r[4]=grouped_expr_left.x
   7    IsNull           4  22   0             0  if (r[4]==NULL) goto 22
   8    Affinity         4   1   0             0  r[4..5] = C
   9    SeekGE           2  22   4             0  key=[4..4]
  10      IdxGT          2  22   4             0  key=[4..4]
  11      DeferredSeek   2   1   0             0
  12      Integer        1   3   0             0  r[3]=1
  13      Column         0   0   1             0  r[1]=grouped_expr_left.x
  14      IfNullRow      2  17   2             0  if 2.nullRow then r[2]=NULL, goto 17
  15      Column         2   1   2             0  r[2]=grouped_expr_right_idx.coalesce (b, 7)
  16      Goto           0  20   0             0
  17      Column         1   1   2             0  r[2]=grouped_expr_right.b
  18      NotNull        2  20   0             0  r[2]!=NULL -> goto 20
  19      Integer        7   2   0             0  r[2]=7
  20      ResultRow      1   2   0             0  output=r[1..2]
  21    Next             2  10   0             0
  22    IfPos            3  26   0             0  r[3]>0 -> r[3]-=0, goto 26
  23    NullRow          1   0   0             0  Set cursor 1 to a (pseudo) NULL row
  24    NullRow          2   0   0             0  Set cursor 2 to a (pseudo) NULL row
  25    Goto             0  12   0             0
  26  Next               0   5   0             1
  27  Halt               0   0   0             0
  28  Transaction        0   1   3             0  iDb=0 tx_mode=Read
  29  Goto               0   1   0             0

SQLITE REFERENCE
QUERY PLAN
|--SCAN grouped_expr_left
`--SEARCH grouped_expr_right USING INDEX grouped_expr_right_idx (a=?) LEFT-JOIN

BYTECODE
addr  opcode            p1  p2  p3  p4       p5  comment
   0  Init               0  28   0            0
   1  OpenRead           0   2   0  1         0
   2  OpenRead           1   3   0  2         0
   3  OpenRead           2   4   0  k(3,,,)   2
   4  Rewind             0  27   0            0
   5    Integer          0   1   0            0
   6    Column           0   0   2            0
   7    IsNull           2  22   0            0
   8    Affinity         2   1   0  C         0
   9    SeekGE           2  22   2  1         0
  10      IdxGT          2  22   2  1         0
  11      DeferredSeek   2   0   1            0
  12      Integer        1   1   0            0
  13      Column         0   0   3            0
  14      IfNullRow      2  17   4            0
  15      Column         2   1   4            0
  16      Goto           0  20   0            0
  17      Column         1   1   4            0
  18      NotNull        4  20   0            0
  19      Integer        7   4   0            0
  20      ResultRow      3   2   0            0
  21    Next             2  10   0            0
  22    IfPos            1  26   0            0
  23    NullRow          1   0   0            0
  24    NullRow          2   0   0            0
  25    Goto             0  12   0            0
  26  Next               0   5   0            1
  27  Halt               0   0   0            0
  28  Transaction        0   0   3  0         1
  29  Goto               0   1   0            0

OPCODE DIFF
same opcode order
