sqlite/conformance/sqlite-sqltests/snapshot_tests/joins/snapshots/joins__left-join-group-by-keeps-expression-index-value.snap
---
source: joins.sqltest
expression: |-
  SELECT grouped_expr_right.a,
             sum(coalesce(grouped_expr_right.b,7))
        FROM grouped_expr_left
        LEFT JOIN grouped_expr_right INDEXED BY grouped_expr_right_idx
          ON grouped_expr_right.a=grouped_expr_left.x
       GROUP BY grouped_expr_right.a;
info:
  statement_type: SELECT
  tables:
  - grouped_expr_left
  - grouped_expr_right
  - grouped_expr_right.a
  setup_blocks:
  - left_join_grouped_expression_index_schema
  database: ':memory:'
---
QUERY PLAN
|--SCAN grouped_expr_left
|--SEARCH grouped_expr_right USING INDEX grouped_expr_right_idx (a=?) LEFT-JOIN
`--USE SORTER FOR GROUP BY

BYTECODE
addr  opcode                    p1  p2  p3  p4            p5  comment
   0          Init               0  64   0                 0  Start at 64
   1          Null               0   8   0                 0  r[8]=NULL
   2          SorterOpen         0   2   0  k(1,Binary)    0  cursor=0
   3          Integer            0   5   0                 0  r[5]=0; clear group by abort flag
   4          Null               0   6   0                 0  r[6]=NULL; initialize group by comparison registers to NULL
   5          Gosub             12  60   0                 0  ; go to clear accumulator subroutine
   6          OpenRead           2   2   0  k(2,B)         0  table=grouped_expr_left, root=2, iDb=0
   7          OpenRead           3   3   0  k(3,B,B)       0  table=grouped_expr_right, root=3, iDb=0
   8          OpenRead           4   4   0  k(3,B,B)       0  index=grouped_expr_right_idx, root=4, iDb=0
   9          Rewind             2  33   0                 0  Rewind table grouped_expr_left
  10            Integer          0  13   0                 0  r[13]=0
  11            Column           2   0  14                 0  r[14]=grouped_expr_left.x
  12            IsNull          14  28   0                 0  if (r[14]==NULL) goto 28
  13            Affinity        14   1   0                 0  r[14..15] = C
  14            SeekGE           4  28  14                 0  key=[14..14]
  15              IdxGT          4  28  14                 0  key=[14..14]
  16              DeferredSeek   4   3   0                 0
  17              Integer        1  13   0                 0  r[13]=1
  18              Column         4   0  10                 0  r[10]=grouped_expr_right_idx.a
  19              IfNullRow      4  22  11                 0  if 4.nullRow then r[11]=NULL, goto 22
  20              Column         4   1  11                 0  r[11]=grouped_expr_right_idx.coalesce (b, 7)
  21              Goto           0  25   0                 0
  22              Column         3   1  11                 0  r[11]=grouped_expr_right.b
  23              NotNull       11  25   0                 0  r[11]!=NULL -> goto 25
  24              Integer        7  11   0                 0  r[11]=7
  25              MakeRecord    10   2   9                 0  r[9]=mkrec(r[10..11])
  26              SorterInsert   0   9   0  0              0  key=r[9]
  27            Next             4  15   0                 0
  28            IfPos           13  32   0                 0  r[13]>0 -> r[13]-=0, goto 32
  29            NullRow          3   0   0                 0  Set cursor 3 to a (pseudo) NULL row
  30            NullRow          4   0   0                 0  Set cursor 4 to a (pseudo) NULL row
  31            Goto             0  17   0                 0
  32          Next               2  10   0                 1
  33          OpenPseudo         1   9   2                 0  2 columns in r[9]
  34          SorterSort         0  49   0                 0
  35            SorterData       0   9   1                 0  r[9]=data
  36            Column           1   0  15                 0  r[15]=pseudo.column 0
  37            Compare          6  15   1  k(1, Binary)   0  r[6..6]==r[15..15]
  38            Jump            39  43  39                 0  ; start new group if comparison is not equal
  39            Gosub            3  53   0                 0  ; check if ended group had data, and output if so
  40            Move            15   6   1                 0  r[6..6]=r[15..15]
  41            IfPos            5  63   0                 0  r[5]>0 -> r[5]-=0, goto 63; check abort flag
  42            Gosub           12  60   0                 0  ; goto clear accumulator subroutine
  43            Column           1   1  16                 0  r[16]=pseudo.column 1
  44            AggStep          0  16   8  sum            0  accum=r[8] step(r[16])
  45            If               4  47   0                 0  if r[4] goto 47; don't emit group columns if continuing existing group
  46            Column           1   0   7                 0  r[7]=pseudo.column 0
  47            Integer          1   4   0                 0  r[4]=1; indicate data in accumulator
  48          SorterNext         0  35   0                 0
  49          Gosub              3  53   0                 0  ; emit row for final group
  50          Goto               0  63   0                 0  ; group by finished
  51          Integer            1   5   0                 0  r[5]=1
  52        Return               3   0   0                 0
  53        IfPos                4  55   0                 0  r[4]>0 -> r[4]-=0, goto 55; output group by row subroutine start
  54      Return                 3   0   0                 0
  55      AggFinal               0   8   0  sum            0  accum=r[8]
  56      Copy                   7   1   0                 0  r[1]=r[7]
  57      Copy                   8   2   0                 0  r[2]=r[8]
  58      ResultRow              1   2   0                 0  output=r[1..2]
  59    Return                   3   0   0                 0
  60    Null                     0   7   8                 0  r[7..8]=NULL; clear accumulator subroutine start
  61    Integer                  0   4   0                 0  r[4]=0
  62  Return                    12   0   0                 0
  63  Halt                       0   0   0                 0
  64  Transaction                0   1   3                 0  iDb=0 tx_mode=Read
  65  Goto                       0   1   0                 0
