sqlite/conformance/sqlite-sqltests/snapshot_tests/joins/snapshots/joins__left-join-range-seek-checks-null-extended-key.snap
---
source: joins.sqltest
expression: |-
  SELECT null_range_left.seed, null_range_middle.key,
             null_range_right.value
        FROM null_range_left
        LEFT JOIN null_range_middle ON true
        LEFT JOIN null_range_right INDEXED BY null_range_right_value
          ON null_range_middle.key<=null_range_right.value;
info:
  statement_type: SELECT
  tables:
  - null_range_left
  - null_range_middle
  - null_range_middle.key
  - null_range_right
  setup_blocks:
  - left_join_null_range_schema
  database: ':memory:'
---
QUERY PLAN
|--SCAN null_range_left
|--SCAN null_range_middle LEFT-JOIN
`--SEARCH null_range_right USING COVERING INDEX null_range_right_value (value>=?) LEFT-JOIN

BYTECODE
addr  opcode           p1  p2  p3  p4      p5  comment
   0  Init              0  29   0           0  Start at 29
   1  OpenRead          0   2   0  k(2,B)   0  table=null_range_left, root=2, iDb=0
   2  OpenRead          1   3   0  k(2,B)   0  table=null_range_middle, root=3, iDb=0
   3  OpenRead          2   5   0  k(2,B)   0  index=null_range_right_value, root=5, iDb=0
   4  Rewind            0  28   0           0  Rewind table null_range_left
   5    Integer         0   4   0           0  r[4]=0
   6    Rewind          1  24   0           0  Rewind table null_range_middle
   7      IfNot         6  23   1           0  if !r[6] goto 23
   8      Integer       1   4   0           0  r[4]=1
   9      Integer       0   5   0           0  r[5]=0
  10      Column        1   0   7           0  r[7]=null_range_middle.key
  11      IsNull        7  20   0           0  if (r[7]==NULL) goto 20
  12      Affinity      7   1   0           0  r[7..8] = C
  13      SeekGE        2  20   7           0  key=[7..7]
  14        Integer     1   5   0           0  r[5]=1
  15        Column      0   0   1           0  r[1]=null_range_left.seed
  16        Column      1   0   2           0  r[2]=null_range_middle.key
  17        Column      2   0   3           0  r[3]=null_range_right_value.value
  18        ResultRow   1   3   0           0  output=r[1..3]
  19      Next          2  14   0           0
  20      IfPos         5  23   0           0  r[5]>0 -> r[5]-=0, goto 23
  21      NullRow       2   0   0           0  Set cursor 2 to a (pseudo) NULL row
  22      Goto          0  14   0           0
  23    Next            1   7   0           1
  24    IfPos           4  27   0           0  r[4]>0 -> r[4]-=0, goto 27
  25    NullRow         1   0   0           0  Set cursor 1 to a (pseudo) NULL row
  26    Goto            0   8   0           0
  27  Next              0   5   0           1
  28  Halt              0   0   0           0
  29  Transaction       0   1   4           0  iDb=0 tx_mode=Read
  30  Integer           1   6   0           0  r[6]=1
  31  Goto              0   1   0           0
