sqlite/conformance/sqlite-sqltests/snapshot_tests/joins/snapshots/joins__left-outer-join-chained.snap
---
source: joins.sqltest
expression: |-
  SELECT
          c.name AS customer_name,
          o.order_id,
          oi.item_id,
          p.name AS product_name
      FROM
          customers c
      LEFT OUTER JOIN orders o ON c.customer_id = o.customer_id
      LEFT OUTER JOIN order_items oi ON o.order_id = oi.order_id
      LEFT OUTER JOIN products p ON oi.product_id = p.product_id;
info:
  statement_type: SELECT
  tables:
  - c.customer_id
  - customers
  - o.order_id
  - oi.product_id
  - order_items
  - orders
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
|--SCAN customers AS c
|--SEARCH o USING COVERING INDEX idx_orders_customer_id (customer_id=?) LEFT-JOIN
|--SEARCH oi USING INDEX idx_order_items_order_id (order_id=?) LEFT-JOIN
`--SEARCH p USING INTEGER PRIMARY KEY (rowid=?) LEFT-JOIN

BYTECODE
addr  opcode              p1  p2  p3  p4              p5  comment
   0  Init                 0  42   0                   0  Start at 42
   1  OpenRead             0   2   0  k(5,B,B,B,B,B)   0  table=customers, root=2, iDb=0
   2  OpenRead             1   8   0  k(2,B)           0  index=idx_orders_customer_id, root=8, iDb=0
   3  OpenRead             2   5   0  k(5,B,B,B,B,B)   0  table=order_items, root=5, iDb=0
   4  OpenRead             3   9   0  k(2,B)           0  index=idx_order_items_order_id, root=9, iDb=0
   5  OpenRead             4   3   0  k(5,B,B,B,B,B)   0  table=products, root=3, iDb=0
   6  Rewind               0  41   0                   0  Rewind table customers
   7    Integer            0   5   0                   0  r[5]=0
   8    RowId              0   8   0                   0  r[8]=customers.rowid
   9    SeekGE             1  37   8                   0  key=[8..8]
  10      IdxGT            1  37   8                   0  key=[8..8]
  11      Integer          1   5   0                   0  r[5]=1
  12      Integer          0   6   0                   0  r[6]=0
  13      IdxRowId         1   9   0                   0  r[9]=cursor 1 for index idx_orders_customer_id.rowid
  14      IsNull           9  32   0                   0  if (r[9]==NULL) goto 32
  15      SeekGE           3  32   9                   0  key=[9..9]
  16        IdxGT          3  32   9                   0  key=[9..9]
  17        DeferredSeek   3   2   0                   0
  18        Integer        1   6   0                   0  r[6]=1
  19        Integer        0   7   0                   0  r[7]=0
  20        Column         2   2  10                   0  r[10]=order_items.product_id
  21        SeekRowid      4  10  28                   0  if (r[10]!=cursor 4 for table products.rowid) goto 28
  22        Integer        1   7   0                   0  r[7]=1
  23        Column         0   1   1                   0  r[1]=customers.name
  24        IdxRowId       1   2   0                   0  r[2]=cursor 1 for index idx_orders_customer_id.rowid
  25        IdxRowId       3   3   0                   0  r[3]=cursor 3 for index idx_order_items_order_id.rowid
  26        Column         4   1   4                   0  r[4]=products.name
  27        ResultRow      1   4   0                   0  output=r[1..4]
  28        IfPos          7  31   0                   0  r[7]>0 -> r[7]-=0, goto 31
  29        NullRow        4   0   0                   0  Set cursor 4 to a (pseudo) NULL row
  30        Goto           0  22   0                   0
  31      Next             3  16   0                   0
  32      IfPos            6  36   0                   0  r[6]>0 -> r[6]-=0, goto 36
  33      NullRow          2   0   0                   0  Set cursor 2 to a (pseudo) NULL row
  34      NullRow          3   0   0                   0  Set cursor 3 to a (pseudo) NULL row
  35      Goto             0  18   0                   0
  36    Next               1  10   0                   0
  37    IfPos              5  40   0                   0  r[5]>0 -> r[5]-=0, goto 40
  38    NullRow            1   0   0                   0  Set cursor 1 to a (pseudo) NULL row
  39    Goto               0  11   0                   0
  40  Next                 0   7   0                   1
  41  Halt                 0   0   0                   0
  42  Transaction          0   1  10                   0  iDb=0 tx_mode=Read
  43  Goto                 0   1   0                   0
