sqlite/conformance/sqlite-sqltests/snapshot_tests/joins/snapshots/joins__left-outer-join-find-nulls.snap
---
source: joins.sqltest
expression: |-
  SELECT
          c.customer_id,
          c.name,
          c.email
      FROM
          customers c
      LEFT OUTER JOIN orders o ON c.customer_id = o.customer_id
      WHERE
          o.order_id IS NULL;
info:
  statement_type: SELECT
  tables:
  - c.customer_id
  - customers
  - orders
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
|--SCAN customers AS c
`--SEARCH o USING COVERING INDEX idx_orders_customer_id (customer_id=?) LEFT-JOIN

BYTECODE
addr  opcode           p1  p2  p3  p4              p5  comment
   0  Init              0  20   0                   0  Start at 20
   1  OpenRead          0   2   0  k(5,B,B,B,B,B)   0  table=customers, root=2, iDb=0
   2  OpenRead          1   8   0  k(2,B)           0  index=idx_orders_customer_id, root=8, iDb=0
   3  Rewind            0  19   0                   0  Rewind table customers
   4    Integer         0   4   0                   0  r[4]=0
   5    RowId           0   5   0                   0  r[5]=customers.rowid
   6    SeekGE          1  15   5                   0  key=[5..5]
   7      IdxGT         1  15   5                   0  key=[5..5]
   8      Integer       1   4   0                   0  r[4]=1
   9      IdxRowId      1   6   0                   0  r[6]=cursor 1 for index idx_orders_customer_id.rowid
  10      NotNull       6  14   0                   0  r[6]!=NULL -> goto 14
  11      RowId         0   1   0                   0  r[1]=customers.rowid
  12      ColumnRange   0   1   2  2                0  r[2..3]=customers.name..email
  13      ResultRow     1   3   0                   0  output=r[1..3]
  14    Next            1   7   0                   0
  15    IfPos           4  18   0                   0  r[4]>0 -> r[4]-=0, goto 18
  16    NullRow         1   0   0                   0  Set cursor 1 to a (pseudo) NULL row
  17    Goto            0   8   0                   0
  18  Next              0   4   0                   0
  19  Halt              0   0   0                   0
  20  Transaction       0   1  10                   0  iDb=0 tx_mode=Read
  21  Goto              0   1   0                   0
